[tool.poetry]
name = "python-mongodb"
version = "0.1.0"
description = ""
authors = ["alanjosue97 <perezaln.09@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mongodb"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
